--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ footer > div {
 </header>
 
 <div class="hero-banner">
-  <img src="BannerPhoto1.PNG" alt="Ambition Advisor Banner">
+  <img src="BannerPhoto1.png" alt="Ambition Advisor Banner">
 
 </div>
 
