--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ footer > div {
   <h2 class="section-title">Our Clients</h2>
   <div class="client-grid">
     <div class="client-box">
-      <img src="british airways client.png" alt="British Airways">
+      <img src="British Airways Client.png" alt="British Airways">
 
       <p>British Airways</p>
     </div>
