--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@ header {
   width: auto;
   max-width: 200px;
 }
+    @media (max-width: 767px) {
+  .logo img {
+    max-height: 70px;
+    max-width: 140px;
+  }
+}
+
 
 
     section {
